hipermidia high contrast fixed

--- a/css/style.less
+++ b/css/style.less
@@ -137,10 +137,10 @@ input, select {
 .icon-question {background-position: 0 0;}
 
 .icon-favorite {background-position: -64px -32px;}
-  .icon-favorite-ok {background-position: -32px -64px;}
+.icon-favorite-ok {background-position: -32px -64px;}
 
   .icon-favorite-20 {background-position: -96px -84px;}
-    .icon-favorite-20-ok {background-position: -96px -64px;}
+  .icon-favorite-20-ok {background-position: -96px -64px;}
 
 .icon-menu {background-position: -128px 0;}
 
@@ -161,7 +161,7 @@ input, select {
 .icon-calendar {background-position: -32px 0;}
 
 .icon-like {background-position: -116px -84px;}
-  .icon-like-ok {background-position: -136px -84px;}
+.icon-like-ok {background-position: -136px -84px;}
 
 .icon-ok {background-position: 0 -96px;}
 
@@ -989,8 +989,7 @@ header {
 
 .hipermidia {
   height: 100%;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
+  padding: 0 !important;
   background-color: transparent !important;
 
   &:extend(.container);
